tests/NormalTests/paczka1/small_fuzzy/59525057.err
Error in line 7: 4CYmN Ad27 66,5
Error in line 6: S298 S298 80,9
Error in line 9: S298 A827 9,9
Error in line 11: V6pZ A827 67,2
